tests/errors/pattern-value-ownership-vector-rest-alias.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let [first, rest @ ..]: Vec[own i64] = [make_owned(1), make_owned(2)];
  drop first;
  return len(rest);
}
